--- a/rest/src/main/resources/static/index.html
+++ b/rest/src/main/resources/static/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet"  href="./css/index.css">
+    <script src="./js/form-validation.js"></script>
     <title>Movie Ratings</title>
 </head>
 <body>
 
-    <div style="width:50%;margin:5vh auto auto;background-color:#bfbc58">
-        <h2 style="text-align:center;color:whitesmoke;text-shadow:2px 2px #737131;">Movie ratings importer</h2>
+    <div id="header-div">
+        <h2>Movie ratings importer</h2>
     </div>
 
-    <form action="form-submit" method="post" style="width:50%;margin:5vh auto auto;padding: 0 25px">
+    <form name="form" onsubmit="return validateForm()" action="form-submit" method="post">
         <div class="form-group">
             <label for="imdbId">Enter IMDb movie's ID:</label>
             <input type="text" class="form-control" id="imdbId" name="imdbId" aria-describedby="imdbIdHelp" placeholder="Example: tt9243804 for The Green Knight">
